All_Component_DX/force-app/main/default/objects/Task_Template__c/Task_Template__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object stores reusable task templates and a list of tasks, separated by record type. Task templates are used in preventive maintenance.</description>
    <label>Task Template</label>
    <nameField>
        <displayFormat>TT-{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>