All_Component_DX/force-app/main/default/objects/Task_Template__c/fields/Task_Template__c.field-meta.xml
<CustomField>
    <fullName>Task_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the Task Template.</description>
    <inlineHelpText>Select the Task Template.</inlineHelpText>
    <label>Work Order Purpose</label>
    <referenceTo>Task_Template__c</referenceTo>
    <relationshipLabel>Task Templates</relationshipLabel>
    <relationshipName>Task_templates</relationshipName>
    <type>Lookup</type>
</CustomField>