All_Component_DX/force-app/main/default/objects/Task_Template__c/fields/Task_Title__c.field-meta.xml
<CustomField>
    <fullName>Task_Title__c</fullName>
    <description>Subject of the task</description>
    <inlineHelpText>Task Title</inlineHelpText>
    <label>Task Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>