All_Component_DX/force-app/main/default/objects/Task_Template__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <description>Name of the task template</description>
    <inlineHelpText>Template Name</inlineHelpText>
    <label>Template Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>