All_Component_DX/force-app/main/default/objects/Task_Template__c/fields/Template_Type__c.field-meta.xml
<CustomField>
    <fullName>Template_Type__c</fullName>
    <description>Select the type of template.</description>
    <inlineHelpText>Select the type of template.</inlineHelpText>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Preventive Maintenance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>