All_Component_DX/force-app/main/default/objects/Task_Template__c/listViews/All_Work_Templates.listView-meta.xml
<ListView>
    <fullName>All_Work_Templates</fullName>
    <columns>NAME</columns>
    <columns>Template_Name__c</columns>
    <columns>Template_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Work Templates</label>
    <language>en_US</language>
</ListView>